Added an image!

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -6,9 +6,20 @@
 </head>
 <body>
 <h1 style = "font-size: 60px" >Glass Dome</h1>
-<p style="font-size:30px">Welcome to Glass Dome!<br> <br> This website will be a place to learn about teachers and
+
+<p style="font-size: 20px">Welcome to Glass Dome!<br> <br> This website will be a place to learn about teachers and
     courses you haven't had at Holy Names and give feedback on the ones you have.</p>
-<p style ="color: maroon">We hope you enjoy.</P>
+<img src="../static/HNA.jpg" height="600" width="900">
+<h2 style="font-size: 40px"> About Us </h2>
+<p style ="color: maroon"> Julia and Claire are two Holy Names seniors from the class of 2021. (Go skippers!)</P>
+
+<h3 style = "font-size: 40px">Mission </h3>
+<p style = "color: maroon">After experiencing the fast paced classes at Holy Names, and seeing friends struggle with getting the support they needed
+    we saw a clear need for an avenue of consistent feedback for teachers and courses. Glass Dome is a place for students to share their experiences
+    with teachers and one another- so our whole community can grow and flourish.
+     </p>
+
+
 
 </body>
 </html>
