--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -3,23 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Glass Dome</title>
+    <style>
+        body {
+            color:black;
+            font-family: Verdana, Geneva, sans-serif;
+
+        }
+
+    </style>
 </head>
 <body>
+
 <h1 style = "font-size: 60px" >Glass Dome</h1>
 
+<img src="../static/HNA2.jpg" height="300" width="1250" alt="Picture of the Dome">
 <p style="font-size: 20px">Welcome to Glass Dome!<br> <br> This website will be a place to learn about teachers and
     courses you haven't had at Holy Names and give feedback on the ones you have.</p>
-<img src="../static/HNA.jpg" height="600" width="900">
+
 <h2 style="font-size: 40px"> About Us </h2>
-<p style ="color: maroon"> Julia and Claire are two Holy Names seniors from the class of 2021. (Go skippers!)</P>
+<p style ="color: maroon"> 	Seattle based students Julia Hopper and Claire Mattingly are current Holy Names Academy
+    seniors (class of 2021- Go skippers!)
+<br>
+    Outside of school Julia likes to spend her time rowing and sleeping, and she has a dog named Tilly.
+    Claire enjoys theater and dance, and likes to bake! </P>
 
 <h3 style = "font-size: 40px">Mission </h3>
 <p style = "color: maroon">After experiencing the fast paced classes at Holy Names, and seeing friends struggle with getting the support they needed
     we saw a clear need for an avenue of consistent feedback for teachers and courses. Glass Dome is a place for students to share their experiences
-    with teachers and one another- so our whole community can grow and flourish.
+    with teachers and one another- so our whole community can grow and flourish. <br><br><br><br>
      </p>
-
-
 
 </body>
 </html>
