Added CSS stylesheet to homepage, made a blank Dept. page, figured out inserting links, added background image.

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -6,32 +6,55 @@
     <style>
         body {
             color:black;
-            font-family: Verdana, Geneva, sans-serif;
+            font-family: Georgia, serif;
+            background-color: ghostwhite;
+        }
+        p{
+            color:maroon;
+            margin left: 10px;
+        }
+        h1{
+            text-align: center;
+            color: white;
 
+            font-size: 150px;
+            text-shadow: 2px 2px 4px #000000;
+            background-image: url("../static/HNA2.jpg");
+
+        }
+        h2{
+            margin left:40px;
+        }
+        h3{
+            margin left: 40px;
         }
 
     </style>
 </head>
 <body>
 
-<h1 style = "font-size: 60px" >Glass Dome</h1>
+<h1>Glass Dome</h1>
 
-<img src="../static/HNA2.jpg" height="300" width="1250" alt="Picture of the Dome">
-<p style="font-size: 20px">Welcome to Glass Dome!<br> <br> This website will be a place to learn about teachers and
+<p> Welcome to Glass Dome!<br> <br> This website will be a place to learn about teachers and
     courses you haven't had at Holy Names and give feedback on the ones you have.</p>
 
-<h2 style="font-size: 40px"> About Us </h2>
-<p style ="color: maroon"> 	Seattle based students Julia Hopper and Claire Mattingly are current Holy Names Academy
+
+<h2>About Us </h2>
+<p> Seattle based students Julia Hopper and Claire Mattingly are current Holy Names Academy
     seniors (class of 2021- Go skippers!)
 <br>
     Outside of school Julia likes to spend her time rowing and sleeping, and she has a dog named Tilly.
-    Claire enjoys theater and dance, and likes to bake! </P>
+    Claire enjoys theater and dance, and likes to bake! </p>
 
-<h3 style = "font-size: 40px">Mission </h3>
-<p style = "color: maroon">After experiencing the fast paced classes at Holy Names, and seeing friends struggle with getting the support they needed
+<h3> Mission </h3>
+<p>After experiencing the fast paced classes at Holy Names, and seeing friends struggle with getting the support they needed
     we saw a clear need for an avenue of consistent feedback for teachers and courses. Glass Dome is a place for students to share their experiences
     with teachers and one another- so our whole community can grow and flourish. <br><br><br><br>
      </p>
+
+<!-- img src="../static/HNA2.jpg" height="300" width="1250" alt="Picture of the Dome" -->
+
+<!-- href="https://www.w3schools.com/">Visit W3Schools.com!-->
 
 </body>
 </html>
