--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -29,11 +29,36 @@
             margin left: 40px;
         }
 
+    .button {
+  background-color: maroon;
+  border: none;
+  color: white;
+  padding: 14px 75px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+  background-color: white;
+  color: maroon;
+}
+
+
     </style>
 </head>
 <body>
 
 <h1>Glass Dome</h1>
+
+<button class="button button1">English</button>
+<button class="button button2">Math</button>
+<button class="button button3">Arts</button>
+<button class="button button4">Language</button>
+<button class="button button5">Science</button>
+<button class="button button6">Other</button>
 
 <p> Welcome to Glass Dome!<br> <br> This website will be a place to learn about teachers and
     courses you haven't had at Holy Names and give feedback on the ones you have.</p>
