Buttons with Links!

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -44,6 +44,7 @@
 .button:hover {
   background-color: white;
   color: maroon;
+ border: 2px solid maroon;
 }
 
 
@@ -52,7 +53,7 @@
 <body>
 
 <h1>Glass Dome</h1>
-
+<!--
 <button class="button button1">English</button>
 <button class="button button2">Math</button>
 <button class="button button3">Arts</button>
@@ -60,6 +61,15 @@
 <button class="button button5">Science</button>
 <button class="button button6">Other</button>
 
+add new links to each of the buttons below- leading to pages that aren't home
+-->
+
+<a href= "/Departments" class="button">English</a>
+<a href="/Departments" class="button" >Math</a>
+<a href="/Departments" class="button">Arts</a>
+<a href="/Departments" class="button">Science</a>
+<a href="/Departments" class="button">Language</a>
+<a href="/Departments" class="button">Other</a>
 <p> Welcome to Glass Dome!<br> <br> This website will be a place to learn about teachers and
     courses you haven't had at Holy Names and give feedback on the ones you have.</p>
 
