Changed Department Flexbox items to buttons, and linked to Teachers page, still need to format properly.

--- a/src/main/resources/templates/Departments.html
+++ b/src/main/resources/templates/Departments.html
@@ -20,7 +20,7 @@
             text-align: center;
             color: white;
 
-            font-size: 150px;
+            font-size: 130px;
             text-shadow: 2px 2px 4px #000000;
             background-image: url("../static/HNA2.jpg");
 
@@ -48,15 +48,26 @@
             color: white;
             text-align: center;
 
-}
+                }
 
+    a:link, a:visited {
+    background-color: maroon;
+    color: white;
+    text-size: 130px;
+    padding: 80px 150px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    }
 
-      }
+  these buttons are so ugly fix please.
+  }
+
 </style>
 <body>
 <h1>English Department</h1>
 
-<div class="flex-container">
+<!--  <div class="flex-container">
     <div>Dawson</div>
     <div>Draggoo</div>
     <div>Gala</div>
@@ -66,9 +77,21 @@
     <div>Little</div>
     <div>Merlino</div>
     <div>Sager</div>
-</div>
+   </div>
+ -->
 
+<a href="/Teachers" target="_blank">Dawson</a>
+<a href="/Teachers" target="_blank">Draggoo</a>
+<a href=/Teachers" target="_blank">Gala</a>
+<a href="/Teachers" target="_blank">Karp</a>
+<a href="/Teachers" target="_blank">Karp</a>
+<a href="/Teachers" target="_blank">Kuzmanich</a>
+<a href="/Teachers"  target="_blank">Little</a>
+<a href="/Teachers" target="_blank">Merlino</a>
+<a href="/Teachers" target="_blank">Sager</a>
 
-<p>Dawson, Draggoo, Gala, D Karp, L Karp, Kuzmanich, Little, Merlino, Sager</p>
+<!-- why does it say target? should it say class = "button" like my other ones?
+-->
+
 </body>
 </html>
