Changed a tags back to divs and gave them buttons, started working on adding teacher headshots/formatting photos for the departments page.

--- a/src/main/resources/templates/Departments.html
+++ b/src/main/resources/templates/Departments.html
@@ -44,41 +44,79 @@
             padding: 20px;
             font-size: 30px;
             flex-basis: 300px;
-            height: 200px;
+            height: 250px;
             color: white;
             text-align: center;
 
                 }
 
     a:link, a:visited {
-    background-color: maroon;
+    background-color: brown;
     color: white;
-    text-size: 130px;
-    padding: 80px 150px;
+    text-size: 15px;
+    padding: 10px 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     }
 
-  these buttons are so ugly fix please.
+    img{
+        border-radius: 50%;
+        width: 250px;
+        height: 180 px;
+    }
+
   }
 
 </style>
 <body>
 <h1>English Department</h1>
 
-<!--  <div class="flex-container">
-    <div>Dawson</div>
-    <div>Draggoo</div>
-    <div>Gala</div>
-    <div>Karp</div>
-    <div>Karp</div>
-    <div>Kuzmanich</div>
-    <div>Little</div>
-    <div>Merlino</div>
-    <div>Sager</div>
+ <div class="flex-container">
+    <div>Kim Dawson
+        <br><br><br>
+        <a href="/Teachers" target="_blank">Profile
+            <img src = "../static/HNA2.jpg" alt="Mrs. Dawson">
+        </a>
+    </div>
+    <div> Draggoo
+        <br>
+        <a href="/Teachers" target="_blank">Profile       </a>
+    </div>
+    <div>Gala
+        <br>
+        <a href="/Teachers" target="_blank">Profile</a>
+    </div>
+    <div>Karp
+        <br>
+        <a href="/Teachers" target="_blank">Profile</a>
+    </div>
+    <div>Karp
+        <br>
+        <a href="/Teachers" target="_blank">Profile</a>
+    </div>
+    <div>Kuzmanich
+        <br>
+        <a href="/Teachers" target="_blank">Profile</a>
+    </div>
+    <div>Little
+        <br>
+        <a href="/Teachers" target="_blank">Profile</a>
+    </div>
+    <div>Merlino
+        <br>
+        <a href="/Teachers" target="_blank">Profile</a>
+    </div>
+    <div>Sager
+        <br>
+        <a href="/Teachers" target="_blank">Profile</a>
+    </div>
    </div>
- -->
+
+<!---
+- Put a bunch of staff head shots in the static folder
+- Make image of teacher the clickable page button (rather than just the word profile)
+- give it a shade change when you hover over it
 
 <a href="/Teachers" target="_blank">Dawson</a>
 <a href="/Teachers" target="_blank">Draggoo</a>
@@ -89,6 +127,7 @@
 <a href="/Teachers"  target="_blank">Little</a>
 <a href="/Teachers" target="_blank">Merlino</a>
 <a href="/Teachers" target="_blank">Sager</a>
+-->
 
 <!-- why does it say target? should it say class = "button" like my other ones?
 -->
