--- a/src/main/resources/templates/Departments.html
+++ b/src/main/resources/templates/Departments.html
@@ -51,7 +51,7 @@
                 }
 
     a:link, a:visited {
-    background-color: brown;
+    background-color: maroon;
     color: white;
     text-size: 15px;
     padding: 10px 30px;
@@ -74,42 +74,58 @@
 
  <div class="flex-container">
     <div>Kim Dawson
-        <br><br><br>
-        <a href="/Teachers" target="_blank">Profile
-            <img src = "../static/HNA2.jpg" alt="Mrs. Dawson">
+        <br>
+         <a href="/Teachers" >
+            <img border="2" alt="Dawson" src="../static/KDAWSON.jpg" width="50" height="200">
         </a>
     </div>
     <div> Draggoo
         <br>
-        <a href="/Teachers" target="_blank">Profile       </a>
+        <a href="/Teachers" >
+            <img border="2" alt="Draggoo" src="../static/KDAWSON.jpg" width="50" height="200">
+        </a>
     </div>
-    <div>Gala
+    <div> Gala
         <br>
-        <a href="/Teachers" target="_blank">Profile</a>
+        <a href="/Teachers" >
+            <img border="2" alt="Gala" src="../static/KDAWSON.jpg" width="50" height="200">
+        </a>
     </div>
     <div>Karp
         <br>
-        <a href="/Teachers" target="_blank">Profile</a>
+        <a href="/Teachers" >
+            <img border="2" alt="Karp" src="../static/KDAWSON.jpg" width="50" height="200">
+        </a>
     </div>
     <div>Karp
         <br>
-        <a href="/Teachers" target="_blank">Profile</a>
+        <a href="/Teachers" >
+            <img border="2" alt="Karp" src="../static/KDAWSON.jpg" width="50" height="200">
+        </a>
     </div>
     <div>Kuzmanich
         <br>
-        <a href="/Teachers" target="_blank">Profile</a>
+        <a href="/Teachers" >
+            <img border="2" alt="Kuzmanich" src="../static/KDAWSON.jpg" width="50" height="200">
+        </a>
     </div>
     <div>Little
         <br>
-        <a href="/Teachers" target="_blank">Profile</a>
+        <a href="/Teachers" >
+            <img border="2" alt="Little" src="../static/KDAWSON.jpg" width="50" height="200">
+        </a>
     </div>
     <div>Merlino
         <br>
-        <a href="/Teachers" target="_blank">Profile</a>
+        <a href="/Teachers" >
+            <img border="2" alt="Merlino" src="../static/KDAWSON.jpg" width="50" height="200">
+        </a>
     </div>
     <div>Sager
         <br>
-        <a href="/Teachers" target="_blank">Profile</a>
+        <a href="/Teachers" >
+            <img border="2" alt="Sager" src="../static/KDAWSON.jpg" width="50" height="200">
+        </a>
     </div>
    </div>
 
