--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -11,7 +11,7 @@
         }
         p{
             color:maroon;
-            margin left: 10px;
+            font-size: 20px;
         }
         h1{
             text-align: center;
@@ -23,10 +23,12 @@
 
         }
         h2{
-            margin left:40px;
+            font-size: 20px
+            color: black;
         }
         h3{
-            margin left: 40px;
+            font-size: 30px;
+
         }
 
     .button {
@@ -70,18 +72,21 @@ add new links to each of the buttons below- leading to pages that aren't home
 <a href="/Departments" class="button">Science</a>
 <a href="/Departments" class="button">Language</a>
 <a href="/Departments" class="button">Other</a>
-<p> Welcome to Glass Dome!<br> <br> This website will be a place to learn about teachers and
+<br><br>
+<h2> Welcome to Glass Dome!</h2>
+
+<p> This website will be a place to learn about teachers and
     courses you haven't had at Holy Names and give feedback on the ones you have.</p>
 
 
 <h2>About Us </h2>
-<p> Seattle based students Julia Hopper and Claire Mattingly are current Holy Names Academy
+<p> Seattle-based students Julia Hopper and Claire Mattingly are current Holy Names Academy
     seniors (class of 2021- Go skippers!)
 <br>
     Outside of school Julia likes to spend her time rowing and sleeping, and she has a dog named Tilly.
     Claire enjoys theater and dance, and likes to bake! </p>
 
-<h3> Mission </h3>
+<h2> Mission </h2>
 <p>After experiencing the fast paced classes at Holy Names, and seeing friends struggle with getting the support they needed
     we saw a clear need for an avenue of consistent feedback for teachers and courses. Glass Dome is a place for students to share their experiences
     with teachers and one another- so our whole community can grow and flourish. <br><br><br><br>
