Fixed main controller so could access website and changed html code so pics could show up

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -19,7 +19,7 @@
 
             font-size: 150px;
             text-shadow: 2px 2px 4px #000000;
-            background-image: url("../static/HNA2.jpg");
+            background-image: url("HNA2.jpg");
 
         }
         h2{
