--- a/src/main/resources/templates/Teachers.html
+++ b/src/main/resources/templates/Teachers.html
@@ -2,9 +2,97 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dawson</title>
+    <title>English Department</title>
 </head>
+
+<title>Glass Dome</title>
+<style>
+        body {
+            color:black;
+            font-family: Georgia, serif;
+         }
+        p{
+            color: black;
+            text-align: center;
+            font-size: 30px;
+         }
+        h1{
+            text-align: center;
+            color: white;
+
+            font-size: 130px;
+            text-shadow: 2px 2px 4px #000000;
+            background-image: url("../static/HNA2.jpg");
+
+        }
+        h2{
+            margin left:40px;
+        }
+        h3{
+            margin left: 40px;
+        }
+        .flex-container {
+        display: flex;
+        flex-flow: row wrap;
+        background-color: white;
+        justify-content: center;
+        }
+
+        .flex-container > div {
+          background-color: maroon;
+            margin: 10px;
+            padding: 40px;
+            font-size: 30px;
+            height: 550px;
+            width: 600px;
+            color: white;
+            text-align: center;
+
+                }
+
+    a:link, a:visited {
+    background-color: maroon;
+    color: white;
+    text-size: 15px;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    }
+
+    img{
+        border-radius: 50%;
+        width: 250px;
+        height: 200 px;
+    }
+
+  }
+
+</style>
 <body>
+
+<h1>Kim Dawson</h1>
+<p>	Vice Principal of Student Life, English Teacher
+</p>
+
+<p>
+    Background: BA from Seattle University, MA from Seattle University
+</p>
+
+<p>
+    Contact: kdawson@holynames-sea.org
+</p>
+<div class="flex-container">
+    <div> Positive Feedback
+
+
+    </div>
+
+    <div> Constructive Criticism
+
+    </div>
+</div>
+
 
 </body>
 </html>
