--- a/src/main/resources/templates/Department.html
+++ b/src/main/resources/templates/Department.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${department} Department" />
+    <title th:text="${department + ' Department'}" />
+
 </head>
 
 <title> Glass Dome </title>
@@ -70,10 +71,25 @@
 
 </style>
 <body>
-<h1 th:text="${department} Department"/>
 
-https://www.baeldung.com/thymeleaf-arrays
+<h1 th:text="${department + ' Department'}" />
 
+<!-- https://www.baeldung.com/thymeleaf-arrays
+-->>
+
+</h1>
+<!--
+this is what loops look like in thymeleaf-
+
+    teacher = individual teacher name-String
+    teachers = the arrayList of teacher names from Julia's program
+    In the brackets, create a div/button for each of them
+
+<tr th:each="teacher: ${teachers}">
+
+    <td th:text="${teacher.name}" />
+</tr>
+-->
  <div class="flex-container">
     <div>Kim Dawson
         <br>
