--- a/src/main/resources/templates/Department.html
+++ b/src/main/resources/templates/Department.html
@@ -14,7 +14,7 @@
             background-color: ghostwhite;
         }
         p{
-            color:maroon;
+            color:white;
             margin left: 10px;
         }
         h1{
@@ -32,6 +32,7 @@
         h3{
             margin left: 40px;
         }
+
         .flex-container {
         display: flex;
         flex-flow: row wrap;
@@ -39,12 +40,12 @@
         justify-content: center;
         }
 
+
         .flex-container > div {
           background-color: maroon;
             margin: 10px;
             padding: 20px;
             font-size: 30px;
-            flex-basis: 300px;
             height: 250px;
             color: white;
             text-align: center;
@@ -75,7 +76,7 @@
 <h1 th:text="${department + ' Department'}" />
 
 <!-- https://www.baeldung.com/thymeleaf-arrays
--->>
+-->
 
 </h1>
 <!--
@@ -86,20 +87,21 @@ this is what loops look like in thymeleaf-
     In the brackets, create a div/button for each of them
 -->
 
-<tr th:each="teacher: ${teachers}">
 
-    <td th:text="${teacher}" />
-    <div> class="flex-container"
-        <br>
-        <a href="/Teacher?teacher=Dawson" >
-            <!--
-            <img border="2" alt=${teacher} src= "../static/Projects Pics/KimDawson.jpg" width="50" height="200">
-        -->
+
+<div class = "flex-container">
+    <div th:each="teacher: ${teachers}" >
+
+        <p th:text= "${teacher}"/>
+
+        <a th:href="@{/Teacher(teacher=${teacher})}">
+
+            <img border="2" alt = "picture N/A" src = "../static/Projects Pics/KimDawson.jpg" width="50" height="200" >
         </a>
+
     </div>
-
-</tr>
-
+</div>
+<!--
  <div class="flex-container">
     <div>Kim Dawson
         <br>
@@ -156,7 +158,7 @@ this is what loops look like in thymeleaf-
         </a>
     </div>
    </div>
-
+-->
 <!---
 - Put a bunch of staff head shots in the static folder
 - Make image of teacher the clickable page button (rather than just the word profile)
