--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -68,7 +68,7 @@ add new links to each of the buttons below- leading to pages that aren't home
 <a href="/Department?department=English" class="button">English</a>
 <a href="/Department?department=Math" class="button" >Math</a>
 <a href="/Department?department=Arts" class="button">Arts</a>
-<a href=/Department?department=Science" class="button">Science</a>
+<a href="/Department?department=Science" class="button">Science</a>
 <a href="/Department?department=Language" class="button">Language</a>
 <a href="/Department?department=Other" class="button">Other</a>
 <br><br>
